--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -46,7 +46,7 @@
   </main>
 
   <footer class="bg-white border-t py-4 text-center text-gray-500 text-sm">
-    © {% now "Y" %} Daily Blog
+    © {% now "Y" %} Daily Blog - Bimochan Jena
   </footer>
 
   <script>lucide.createIcons()</script>
